@@ -98,4 +98,7 @@
 \= Expect no match - tests \C at end of subject
     ab
 
+/\C[^\v]+\x80/utf
+    [AΏBŀC]
+
 # End of testinput22
